--- a/bootpark/Boot-Park/Web.config
+++ b/bootpark/Boot-Park/Web.config
@@ -1,7 +1,8 @@
 <?xml version="1.0"?>
 <configuration>
   <connectionStrings>
-    <add name="MariaDBLocal" connectionString="Server=localhost;Uid=admin;Pwd=admin;Database=bootpark;"/>
+    <add name="MariaDBLocal" connectionString="Server=172.16.31.150;Uid=admin;Pwd=admin;Database=bootpark;"/>
+    <!--<add name="MariaDBLocal" connectionString="Server=127.0.0.1;Uid=admin;Pwd=admin;Database=bootpark;"/>-->
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
@@ -18,7 +19,7 @@
     <httpModules>
       <add name="DirectRequestModule" type="Ext.Net.DirectRequestModule, Ext.Net"/>
     </httpModules>
-    <compilation debug="true" targetFramework="4.5"/>
+    <compilation debug="true" targetFramework="4.5.1"/>
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <system.webServer>
