--- a/kik/Circulation/bin/Circulation.dll.config
+++ b/kik/Circulation/bin/Circulation.dll.config
@@ -5,7 +5,8 @@
   </configSections>
   
   <connectionStrings>
-    <add name="MySQL" connectionString="Server=localhost;Uid=admin;Pwd=admin;Database=BOOTPARK;" />
+    <add name="MySQL" connectionString="Server=172.16.31.150;Uid=admin;Pwd=admin;Database=BOOTPARK;" />
+    <!--<add name="MySQL" connectionString="Server=127.0.0.1;Uid=admin;Pwd=admin;Database=BOOTPARK;" />-->
   </connectionStrings>
   <!--
     Para obtener una descripción de los cambios de web.config, vea http://go.microsoft.com/fwlink/?LinkId=235367.
